--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <button onclick="generateGroups()">Genera Gruppi</button>
   <div id="output"></div>
 
-  <script> src="app.js"></<script>
+  <script src="app.js"></script>
 </body>
 </html>
