--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
 <head>
   <title>Generatore di Gruppi</title>
-  <style>
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Runaway frequency tool</h1>
-  <label for="names">Inserisci i nomi delle persone (separati da virgola):</label>
-  <input type="text" id="names" />
-  <button onclick="generateGroups()">Genera Gruppi</button>
-  <div id="output"></div>
+  <div class="container">
+    <h1>Generatore di Gruppi</h1>
+    <div class="input-section">
+      <label for="names">Inserisci i nomi delle persone (separati da virgola):</label>
+      <input type="text" id="names" />
+    </div>
+    <button onclick="generateGroups()">Genera Gruppi</button>
+    <div id="output"></div>
+  </div>
 
   <script src="app.js"></script>
 </body>
 </html>
+
