--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Generatore di Gruppi</h1>
+    <h1>Runaway Frequency Tool</h1>
     <div class="input-section">
       <label for="names">Inserisci i nomi delle persone (separati da virgola):</label>
       <input type="text" id="names" />
