--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     </div>
     <button onclick="generateGroups()">Genera Gruppi</button>
     <div id="output"></div>
+
+    <table id="frequency-table">
+      <caption>Frequenza FPV</caption>
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Frequenza</th>
+        </tr>
+      </thead>
+      <tbody id="frequency-table-body">
+        <!-- Qui verranno aggiunti dinamicamente i dati della tabella tramite JavaScript -->
+      </tbody>
+    </table>
   </div>
 
   <script src="app.js"></script>
