--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 <body>
   <div class="container">
     <h1>¯`·.¸¸.·´Runaway Frequency Tool´·.¸¸.·`¯</h1>
+	<nav>
+		<ul>
+			<li><a href="tabelle.html">Tabelle FPV</a></li>
+			<li><a href="pagina2.html">Pagina 2</a></li>
+			<li><a href="pagina3.html">Pagina 3</a></li>
+		</ul>
+	</nav>
     <div class="input-section">
       <label for="names">Inserisci i nomi delle persone (separati da virgola):</label>
       <input type="text" id="names" />
@@ -28,6 +35,6 @@
     </table>
   </div>
 
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
