--- a/tabelle.html
+++ b/tabelle.html
@@ -13,7 +13,7 @@
 		</ul>
 	</nav>
 	<div class="image-container">
-		<img src="img/fpvTable.jpg" alt="Descrizione dell'immagine" />
+		<img src="img/fpvTable.jpg" alt="Tabella frequenze FPV Analogic" />
 	</div>
   </div>
 </body>
