--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<nav>
 		<ul>
 			<li><a href="tabelle.html">Tabelle FPV</a></li>
-			<li><a href="pagina2.html">Pagina 2</a></li>
-			<li><a href="pagina3.html">Pagina 3</a></li>
+			<li><a href="info.html">INFO</a></li>
 		</ul>
 	</nav>
     <div class="input-section">
