--- a/tabelle.html
+++ b/tabelle.html
@@ -6,12 +6,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>.·´Tabelle Frequenze Completa´·.</h1>
+    <h1>▄▀▄Tabelle Frequenze▀▄▀</h1>
 	<nav>
 		<ul>
 			<li><a href="index.html">Homepage</a></li>
 		</ul>
 	</nav>
+	<h2></h2>
 	<div class="image-container">
 		<img src="img/fpvTable.jpg" alt="Tabella frequenze FPV Analogic" />
 	</div>
