--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Informazioni sul Team e sul Tool</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
