--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <title>Runaway Frequency Tool</title>
   <link rel="stylesheet" href="css/style.css">
+  
 </head>
 <body>
   <div class="container">
-    <h1>¯`·.¸¸.·´Runaway Frequency Tool´·.¸¸.·`¯</h1>
+    <h1>▀▄▀Runaway Frequency Tool▀▄▀</h1>
 	<nav>
 		<ul>
 			<li><a href="tabelle.html">Tabelle FPV</a></li>
