--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <h1>▀▄▀Runaway Frequency Tool▀▄▀</h1>
 	<nav>
 		<ul>
-			<li><a href="tabelle.html">Tabelle FPV</a></li>
-			<li><a href="info.html">INFO</a></li>
+			<li><a href="tabelle.html">-Clicca QUI per le Tabelle FPV-</a></li>
+			<p></p>
+			<li><a href="info.html">-Clicca QUI per le INFO-</a></li>
 		</ul>
 	</nav>
     <div class="input-section">
@@ -20,6 +21,7 @@
     </div>
     <button onclick="generateGroups()">Genera Gruppi</button>
     <div id="output"></div>
+	<p></p>
 
     <table id="frequency-table">
       <caption>Frequenza FPV</caption>
