--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <title>Runaway Frequency Tool</title>
   <link rel="stylesheet" href="css/style.css">
-  
 </head>
 <body>
+	<!-- Qui c'è il menu con i link -->
+	<div class="topnav">
+		<a class="active" href="index.html">Home</a>
+		<a href="tabelle.html">Tabella Frequenze</a>
+		<div class="topnav-right">
+			<a href="info.html">About</a>
+		</div>
+	</div>
+	
   <div class="container">
     <h1>▀▄▀Runaway Frequency Tool▀▄▀</h1>
-	<nav>
-		<ul>
-			<li><a href="tabelle.html">-Clicca QUI per le Tabelle FPV-</a></li>
-			<p></p>
-			<li><a href="info.html">-Clicca QUI per le INFO-</a></li>
-		</ul>
-	</nav>
+	
     <div class="input-section">
       <label for="names">Inserisci i nomi delle persone (separati da virgola):</label>
       <input type="text" id="names" />
