--- a/info.html
+++ b/info.html
@@ -5,13 +5,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<!-- Qui c'è il menu con i link -->
+	<div class="topnav">
+		<a href="index.html">Home</a>
+		<a href="tabelle.html">Tabella Frequenze</a>
+		<div class="topnav-right">
+			<a class="active" href="info.html">About</a>
+		</div>
+	</div>
   <div class="container">
     <h1>▀▄▀▄▀▄Info▄▀▄▀▄▀</h1>
-		<nav>
-		<ul>
-			<li><a href="index.html">Homepage</a></li>
-		</ul>
-	</nav>
     <h2>-Il nostro Team-</h2>
     <p>Il nostro team è composto da persone appassionate di FPV e solo ultimamente nel campo dei tiny Whoop. Siamo appassionati di volo acrobatico e siamo impegnati a fornire strumenti utili per la gestione delle frequenze nel mondo FPV.</p>
     <h2>-Il Tool-</h2>
