--- a/tabelle.html
+++ b/tabelle.html
@@ -5,13 +5,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<!-- Qui c'è il menu con i link -->
+	<div class="topnav">
+		<a href="index.html">Home</a>
+		<a class="active" href="tabelle.html">Tabella Frequenze</a>
+		<div class="topnav-right">
+			<a href="info.html">About</a>
+		</div>
+	</div>
   <div class="container">
     <h1>▄▀▄Tabelle Frequenze▀▄▀</h1>
-	<nav>
-		<ul>
-			<li><a href="index.html">Homepage</a></li>
-		</ul>
-	</nav>
 	<h2></h2>
 	<div class="image-container">
 		<img src="img/fpvTable.jpg" alt="Tabella frequenze FPV Analogic" />
